Client integer to int, null to nullable changes